
CompositeBuilder
----------------------
* Fix validation error due to multiple calls to builder.validate() (CC-620). Reported by Tim Morrow

EmailPublisher
----------------------
* Validate that email addresses are legal (CC-601). Patch by Jerome Lacoste. 

HttpFile
----------------------
* Fix bug where HttpFile didn't work with domain only (http://host.com) urls (CC-614). Patch by J. David Beutel

Log4jThreadGroup
----------------------
* Spelling correction: "uncaugth" changed to "uncaught". Pointed out by Martin Sweitzer. 

MKS
----------------------
* Fix bug where modifications were returned from all previous builds, not just the current build (CC-628). Patch by Min Li

PhingBuilder
----------------------
* Add new plug-in for PHP build tool Phing (CC-613). Submitted by Hans Lellelid.

PluginRegistry
----------------------
* Remove deprecated method PluginRegistry.getDefaultProperties(String pluginName).

ProjectConfig
----------------------
* Fixed a bug where ProjectConfig.stop() was calling Project.start() instead of Project.stop(). The effect of this would be for projects that have been removed from config.xml to continue to build.

Pvcs
----------------------
* Fixed bug where extra double quotes were being added to the call to pcli (CC-604). Patches by Karsten Wintermann and Dave Kilroy.

UCM
----------------------
* Added support for multiple vobs (CC-597). Patch by Mark Holster.

reporting
======================

XmlServlet
----------------------
* Enhancement to enable Cruise to work with the cctray distributed as part of CruiseControl.net. Patch by Davie Moston.
    Install cctray from  http://sourceforge.net/project/showfiles.php?group_id=71179
    Then run cctray, select setting from the tray icon, then add, add server, "Use Custom URL"  with a URL of "http://YOUR_SERVER/cruisecontrol/xml", then select the project you want to monitor and hit OK.

contrib
======================

distributed
----------------------